--- a/IEOR120-Homework5.ipynb
+++ b/IEOR120-Homework5.ipynb
@@ -256,14 +256,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d440a31c",
+   "metadata": {},
+   "source": [
+    "You are enrolling in an MBA program. To pay your tuition, you can either take out a\n",
+    "standard student loan (so that interest payments are not tax deductible) that has an EAR of\n",
+    "6%, or you can use a tax-deductible home equity loan with an APR (monthly compounding)\n",
+    "of 7%. You anticipate being in a low tax bracket, so your tax rate will only be 15%. Which\n",
+    "loan should you use?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "617e4509",
+   "execution_count": null,
+   "id": "ba2e7308",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "q5 = \"...\"\n",
+    "q5"
    ]
   },
   {
@@ -275,14 +287,101 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "9c346ae7",
+   "cell_type": "markdown",
+   "id": "e2b782cd",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "Consider a project that requires an initial investment of $\\$ $100,000 and will produce a single cash flow of $\\$ $137,000 in 4 years."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "079d7ee5",
+   "metadata": {},
+   "source": [
+    "(a) What is the NPV of this project if the 4-year interest rate is 3.9% (EAR)?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c930acd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q6a = ...\n",
+    "q6a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd1ea151",
+   "metadata": {},
+   "source": [
+    "(b) What is the NPV of this project if the 4-year interest rate is 9.1% (EAR)?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2a090587",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q6b = ...\n",
+    "q6b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51b7bfdd",
+   "metadata": {},
+   "source": [
+    "(c) What is the highest 4-year interest rate such that this project is still profitable?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b45bc082",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q6c = ...\n",
+    "q6c"
    ]
   },
   {
