--- a/IEOR120-Homework7.ipynb
+++ b/IEOR120-Homework7.ipynb
@@ -39,14 +39,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f21e1c16",
+   "metadata": {},
+   "source": [
+    "Bill Clinton was reportedly paid $\\$10.50$  million to write his book My Life. Suppose the book took 4 years to write. In the time he spent writing, Clinton could have been paid to make speeches. Given his popularity, assume that he could have earned $\\$8$ million a year (paid\n",
+    "at the end of the year) for speaking instead of writing. Assume his cost of capital is $10.0$\\% per year.\n",
+    "\n",
+    "(a) What is the NPV of agreeing to write the book in million (ignoring any royalty payments)?\n",
+    "\n",
+    "*Assign q1a to your answer*"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "158e4c5e",
+   "execution_count": null,
+   "id": "27a87401",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "q1a = ...\n",
+    "q1a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2862c138",
+   "metadata": {},
+   "source": [
+    "(b) Assume that, once the book is finished, it is expected to generate royalties of $\\$5$ million in the first year (at the end of the first year) and these royalties are expected to decrease at a rate of $30$\\% per year in perpetuity. What is the NPV of the book with the royalty payments (in million)?\n",
+    "\n",
+    "*Assign q1b to your answer*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13d38e8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q1b = ...\n",
+    "q1b"
    ]
   },
   {
@@ -58,14 +92,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "977b5a88",
+   "cell_type": "markdown",
+   "id": "2b595e4d",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "You are considering an investment in a clothes distributor. The company needs $\\$110,000$ today and expects to repay you $\\$130,000$ in a year from now. What is the IRR of this investment opportunity? Given the riskiness of the investment opportunity, your cost of capital is $15\\%$. What does the IRR rule say about whether you should invest?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36d0f7c4",
+   "metadata": {},
+   "source": [
+    "*Type your answer here, replacing this text.*"
    ]
   },
   {
