--- a/IEOR120-Homework8.ipynb
+++ b/IEOR120-Homework8.ipynb
@@ -39,14 +39,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c341cae4",
+   "metadata": {},
+   "source": [
+    "Kokomochi is considering the launch of an advertising campaign for its latest dessert product, the Mini Mochi Munch. Kokomochi plans to spend $\\$3.17$ million on advertising this year for the campaign. The ads are expected to boost sales of the Mini Mochi Munch by $\\$11.05$ million this year and by $\\$9.08$ million next year. In addition, sales of other products are expected to rise by $\\$2.63$ million each year.\n",
+    "Kokomochi’s gross profit margin for the Mini Mochi Munch is $32$\\%, and its gross profit margin averages $25$\\% for all other products. The company’s marginal corporate tax rate is $40$\\% both this year and next year. What are the year 1 and year 2 incremental earnings associated with the advertising campaign?\n",
+    "\n",
+    "*Assign each variable to your answer accordingly*"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "158e4c5e",
+   "execution_count": null,
+   "id": "aac2dae1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "year1_gross_profit = ...\n",
+    "year1_gross_profit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d82bf6ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year1_EBIT = ...\n",
+    "year1_EBIT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c963176",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year1_incremental_earnings = ...\n",
+    "year1_incremental_earnings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3a2f375",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year2_gross_profit = ...\n",
+    "year2_gross_profit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0e15095",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year2_EBIT = ...\n",
+    "year2_EBIT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b699a661",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year2_incremental_earnings = ...\n",
+    "year2_incremental_earnings"
    ]
   },
   {
@@ -58,14 +124,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e0d589b4",
+   "metadata": {},
+   "source": [
+    "Hyperion, Inc. currently sells its latest high-speed color printer, the Hyper 500, for $\\$350$. It plans to lower the price to $\\$303$ next year. Its cost of goods sold for the Hyper 500 is $\\$210$ per unit, and this year’s sales are expected to be $21,150$ units.\n",
+    "\n",
+    "(a) Suppose that if Hyperion drops the price to $\\$303$ immediately, rather than waiting\n",
+    "a year, it can increase this year’s sales by $30$\\% to $27495$ units. What would be the incremental impact on this year’s EBIT of such a price drop? In other words, what would the change in this year’s EBIT would be?\n",
+    "\n",
+    "*Assign q2a to your answer*"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "977b5a88",
+   "execution_count": null,
+   "id": "57ef9252",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "q2a = ...\n",
+    "q2a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d8ff776",
+   "metadata": {},
+   "source": [
+    "(b) Suppose that for each printer sold, Hyperion expects additional sales of $\\$51$ per year on ink cartridges for the next years, and Hyperion has a gross profit margin of $75$\\% on ink cartridges. What is the incremental impact on EBIT for the next three years of a price drop this year?\n",
+    "\n",
+    "    (i) The change in EBIT from ink cartridge sales will be:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48c58be4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q2bi = ...\n",
+    "q2bi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6a03c7f",
+   "metadata": {},
+   "source": [
+    "    (ii) The change in EBIT year 1 will be:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba979dbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q2bii = ...\n",
+    "q2bii"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d558a31",
+   "metadata": {},
+   "source": [
+    "    (iii) The change in EBIT year 2 will be:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8d688e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q2biii = ...\n",
+    "q2biii"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0bd4e0e",
+   "metadata": {},
+   "source": [
+    "    (iv) The change in EBIT year 3 will be:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd3ad584",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q2biv = ...\n",
+    "q2biv"
    ]
   },
   {
