--- a/IEOR120-Homework9.ipynb
+++ b/IEOR120-Homework9.ipynb
@@ -39,14 +39,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c431f377",
+   "metadata": {},
+   "source": [
+    "Apple has a share price of $\\$23$ today. If Apple is expected to pay a dividend of $\\$0.78$ this year and its stock price is expected to grow to $\\$24.54$ at the end of the year, what is Apple’s dividend yield and equity cost of capital (in percentage)?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "158e4c5e",
+   "execution_count": null,
+   "id": "826b1b3f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "dividend_yield = ...\n",
+    "dividend_yield"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0df5dd09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "equity_cost_of_capital = ...\n",
+    "equity_cost_of_capital"
    ]
   },
   {
@@ -58,14 +77,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dd9fb964",
+   "metadata": {},
+   "source": [
+    "IBM has just paid an annual dividend of $\\$1.40$. Analysts are predicting dividends to grow by $\\$0.15$ per year over the next five years. After then, IBM’s earnings are expected to grow $7.0$\\% per year, and its dividend payout rate will remain constant. If IBM’s equity cost of capital is $9.5$\\% per year, what price does the dividend-discount model predict IBM stock should sell for today?\n",
+    "\n",
+    "*Assign q2 to your answer in numbers (you don't have to include \\$)*"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "977b5a88",
+   "execution_count": null,
+   "id": "e7bb4bd2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "q2 = ...\n",
+    "q2"
    ]
   },
   {
